tests/ui/consts/slice_elem_ty_mismatch_in_unsizing_cast.rs
const FOO: &str = unsafe { &*(1_usize as *const [i64; 0] as *const [u8] as *const str) };
//~^ ERROR: cannot cast

fn main() {}
